<resources>
    <string name="app_name">Conc</string>
    <string-array name="menu_array">
        <item>Player Profile</item>
        <item>Side-Line Test</item>
        <item>Baseline Test</item>
        <item>Follow up Test</item>
    </string-array>
    <string name="title_activity_test_menu">TestMenuActivity</string>
    <string-array name="testmenu_array">
        <item>Head Impact Assessment 1</item>
        <item>Head Impact Assessment 2</item>
        <item>Head Impact Assessment 3</item>
    </string-array>
    <string name="title_activity_administrator">AdministratorActivity</string>
    <string name="physician_name_hint">..."Dr Gerard Smith"</string>
    <string name="physician_name">Physicians Name:</string>
    <string name="date">Date:</string>
    <string name="date_hint">..."dd/mm/yyyy"</string>
    <string name="assessment_time">Assessment Time:</string>
    <string name="assessment_time_hint">..."19:00"</string>
    <string name="kickoff_time">Kick-Off Time:</string>
    <string name="kickoff_time_hint">..."19:00"</string>
    <string name="start_test">Start Test</string>
    <string name="hia1a_section_header">COMPLETE EITHER SECTION 1 OR SECTION 2</string>
    <string name="hia1a_section1_header">SECTION 1: Immediate and permanent removal from play</string>
    <string name="symptom_tp">Tonic posturing</string>
    <string name="symptom_conv">Convulsion</string>
    <string name="symptom_cconsc">Confirmed loss of consciousness</string>
    <string name="symptom_sconsc">Suspected loss of consciousness</string>
    <string name="symptom_bal">Balance disturbance/ataxia</string>
    <string name="symptom_orien">Player not orientated in time, place or person</string>
    <string name="symptom_daze">Clearly dazed</string>
    <string name="symptom_conf">Definite confusion</string>
    <string name="symptom_behav">Definite behavioural cahnges</string>
    <string name="symptom_ident">On field identification of sign or symptom of concussion</string>
    <string name="symptom_ocu">Oculomotor signs (e.g. spontaneous nystagmus)</string>
    <string name="hia1a_removal_header">Removal requested by:</string>
    <string name="removal_dr">"Team doctor"</string>
    <string name="removal_mdd">"Match day doctor"</string>
    <string name="removal_phy">"Physiotherapist"</string>
    <string name="removal_ref">"Referee"</string>
    <string name="removal_tdr">"Tournament Doctor"</string>
    <string name="removal_video">"Following in-game video review"</string>
    <string name="hia1a_video_header">Video Available?</string>
    <string name="vid_yes">"Yes"</string>
    <string name="vid_no">"No"</string>
    <string name="title_activity_hia1">HIA1Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_hia">HIAActivity</string>
    <string name="hia1a_section21_header">SECTION 2: Pitch-side Head Injury Assessment</string>
    <string name="hia1a_section22_header">Identify reason(s) for HIA below:</string>
    <string name="hia1a_section31_header">Pitch-side Head Injury Assessment</string>
    <string name="hia1a_section32_header">ANSWER ALL QUESTIONS - (Incorrect =1, Correct =2)</string>
    <string name="hia1a_section33_header">Any coloumn = 1, NO return to play </string>
    <string name="hia1a_section34_header">Maddocks Questions - Orientation </string>
    <string name="madd1">What venue are we at today?</string>
    <string name="madd2">Which half is it now?</string>
    <string name="madd3">Who scored last in this match?</string>
    <string name="madd4">What team did you play last week/game?</string>
    <string name="madd5">Did your team win the last game?</string>
    <string name="incorrect">Incorrect</string>
    <string name="correct">Correct</string>
    <string name="hia1a_section41_header">Symptoms checklist</string>
    <string name="symptom2_1">Do you have a headache?</string>
    <string name="symptom2_2">Do you have any dizziness?</string>
    <string name="symptom2_3">Do you have any \'pressure in your head\'?</string>
    <string name="symptom2_4">Do you feel nauseated or do you feel like vomiting?</string>
    <string name="symptom2_5">Do you have any blurred vision?</string>
    <string name="symptom2_6">Does the light or noise worry you?</string>
    <string name="symptom2_7">Do you feel as though you are slowing down?</string>
    <string name="symptom2_8">Do you feel like you are in a fog?</string>
    <string name="symptom2_9">Do you feel unwell?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hia1a_section51_header">Delayed Recall</string>
    <string name="hia1a_section52_header">(ABNORMAL is a score less than 3 or less than baseline)</string>
    <string name="recall">Test recall of immediate memory words</string>
    <string name="abnormal">Abnormal</string>
    <string name="normal">Normal</string>
    <string name="hia1a_section61_header">Clinical signs</string>
    <string name="cs1">Emotional - sad, anxious, nervous, irritable</string>
    <string name="cs2">Drowsy/ has difficulty concentrating</string>
    <string name="cs3">Doctor performing HIA suspects concussion despite above test being normal</string>
    <string name="hia1a_section71_header">Requested by:</string>
    <string name="hia1a_section81_header">Completed by:</string>
    <string name="hia1a_section91_header">Player removed:</string>
    <string name="vid_influence">Did video influence the request for the HIA?</string>
    <string name="MDD_present">Was the Match Day Doctor present during the HIA??</string>
    <string name="vid_influence2">Did video influence the decision following the HIA?</string>
    <string name="hia1a_81_sectionheader">ANSWER ALL QUESTIONS</string>
    <string name="hia1a_811_sectionheader">Any coloumn 1 answer = NO return to play</string>
    <string name="hia1a_82_sectionheader">Immediate memory</string>
    <string name="hia1a_83_sectionheader">Digits backwards</string>
    <string name="opt_1">Option 1 &#160; - &#160;&#160; </string>
    <string name="opt_2">Option 2 &#160; - &#160;&#160; </string>
    <string name="opt_3">Option 3 &#160; - &#160;&#160; </string>
    <string name="opt_1_num1">Option 1 numbers: -</string>
    <string name="opt_2_num2">Option 2 numbers (if needed): -</string>
    <string-array name="player_removed_spinner">
        <item>No</item>
        <item>Yes, pitchside HIA abnormal</item>
        <item>Yes, player removed for another injury</item>
    </string-array>
    <string-array name="hia1_1_spinner">
        <item>Referee</item>
        <item>Team doctor</item>
        <item>Tournament doctor</item>
        <item>Match day doctor</item>
        <item>Following in-game video review</item>
        <item>Physiotherapist</item>
    </string-array>
    <string name="imed_score">Immediate memory score (out of 15):</string>
    <string name="digback_score">Digits backwards score (out of 4):</string>
    <string name="del_score">Delayed memory score (out of 5):</string>
    <string name="hia2a_section11_header">Was an HIA1 form completed, and if yes, what was the restult?</string>
    <string name="hia2a_section12_header">Select one option:</string>
    <string name="hia2a_section21_header">SECTION 1: Symptom Checklist</string>
    <string name="hia2a_section22_header">Ask the player: Do you have any of the following symptoms? Ask about every symptom listed.
    Score each symptom, based on how the player feels at the time of questioning, from 0 (no symptom at all)
        to 6(the most severe they ave ever experienced). </string>
    <string-array name="listDataHeader">
        <item>Headaches</item>
        <item>\'Pressure in head\'</item>
        <item>Neck pain</item>
        <item>Nausea/vomiting</item>
        <item>Dizziness</item>
        <item>Blurred vision</item>
        <item>Balance problems</item>
        <item>Sensitivity to light</item>
        <item>Sensitivity to noise</item>
        <item>Feeling slowed down</item>
        <item>Feeling like \'in a fog\'</item>
        <item>\'Dont feel right\'</item>
        <item>Difficulty concentrating</item>
        <item>Difficulty remembering</item>
        <item>Fatigue/low energy</item>
        <item>Confusion</item>
        <item>Drowsiness</item>
        <item>Trouble falling asleep</item>
        <item>More emotional</item>
        <item>Irritability</item>
        <item>Sadness</item>
        <item>Nervous/anxious</item>
    </string-array>
    <string name="exp_not_conc">If the injured player has symptoms not usually experienced following
    a Rugby match or training and your diagnosis is NOT concussion please provide an explanation
        (below) for not confirming a diagnosis of concussion</string>
    <string name="hia2a_section31_header">SECTION 2: Cognitive Assessment</string>
    <string name="hia2a_section32_header">Standardised Assessment of Concussion (SAC)</string>
    <string name="hia2a_section33_header">ORIENTATION</string>
    <string name="hia2a_section34_header">(1 point for each correct answer)</string>
    <string name="orien_1">What month is it?</string>
    <string name="orien_2">What is the date today?</string>
    <string name="orien_3">What is the day of the week?</string>
    <string name="orien_4">What year is it?</string>
    <string name="orien_5">What time is it right now? (within 1 hour)</string>
    <string name="orien_score">Orientation score (/5):</string>
    <string name="sac_dr">SAC - Delayed Recall</string>
    <string name="sac_it">Number of words from Immediate test remembered? (/5)</string>
    <string name="sac_sum">SAC - Summary and Total Score</string>
    <string name="sac_1">Orientation (/5)</string>
    <string name="sac_2">Immediate memory (/15)</string>
    <string name="sac_3">Concentration (digits backwards) (/5)</string>
    <string name="conc_score">Concentration (/5)</string>
    <string name="sac_4">Delayed recall (/5)</string>
    <string name="sac_5">Total (/30)</string>
    <string name="hia2a_section41_header">SECTION 4: Clinical diagnosis at this time</string>
    <string name="conc_conf">Concussion confirmed:</string>
    <string name="conc_conf2">HIA Form 3 must be completed as part of follow-up of a confirmed concussion</string>
    <string name="conc_n_conf">Concussion not confirmed(and must be followed up with completetion of HIA Form 3):</string>
    <string name="conc_n_conf2">HIA Form 3 must be completed to exclude a delayed concussion and as part of the ongoing monitoring in a player with a
                                possible head injury</string>
    <string name="hia3a_4_sectionheader">SECTION 6: Cognitive Assessment</string>
    <string name="hia3a_5_sectionheader">SECTION 7: Results of HIA3</string>
    <string name="cogAssTool">Cognitive assessment tool used:</string>
    <string name="cogAss1">Cognitive Assessment (SAC) from SCAT</string>
    <string name="cogAss2">CogSport</string>
    <string name="cogAss3">Headminder</string>
    <string name="cogAss4">Impact</string>
    <string name="cogAss5">Other</string>
    <string name="cogAssRes">What was the result of this cognitive assessment?</string>
    <string name="domains">Identify the domain(s) that were abnormal in this HIA3:</string>
    <string name="dom1">Symptom assessment</string>
    <string name="dom2">Cognitive assessment tool</string>
    <string name="dom3">Balance evaluation</string>
    <string name="dom4">Clinical suspicion (over and above the other tests)</string>
    <string name="dom5">Nill</string>
    <string name="diag_conc">Does the HIA3 confirm a diagnosis of concussion?</string>
    <string name="diag_conc2">If this HIA 3 has an abnormal domain result and you believe the player does not
                                have a concussion , explain why:</string>
</resources>