<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:id="@+id/linearLayout001">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView001"
            android:text="@string/hia3a_4_sectionheader"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:id="@+id/linearLayout002"
        android:layout_below="@+id/linearLayout001">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView002"
            android:text="@string/cogAssTool"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:id="@+id/linearLayout003"
        android:layout_below="@+id/linearLayout002">


        <CheckBox
            android:text="@string/cogAss1"
            android:layout_width="207dp"
            android:layout_height="49dp"
            android:id="@+id/checkBox3_CA1" />

        <CheckBox
            android:text="@string/cogAss2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_CA2"
            android:layout_weight="32.38" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:id="@+id/linearLayout004"
        android:layout_below="@+id/linearLayout003">


        <CheckBox
            android:text="@string/cogAss3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox3_CA3"
            android:layout_weight="1" />

        <CheckBox
            android:text="@string/cogAss4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_CA4"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:id="@+id/linearLayout005"
        android:layout_below="@+id/linearLayout004">


        <CheckBox
            android:text="@string/cogAss5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox3_CA4"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="...Other"
            android:ems="10"
            android:id="@+id/editText6"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:id="@+id/linearLayout006"
        android:layout_below="@+id/linearLayout005">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView003"
            android:text="@string/cogAssRes"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:id="@+id/linearLayout007"
        android:layout_below="@+id/linearLayout006">


        <CheckBox
            android:text="@string/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox3_CAN"
            android:layout_weight="1" />

        <CheckBox
            android:text="@string/abnormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_CAAN"
            android:layout_weight="1" />
    </LinearLayout>



</RelativeLayout>