<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="15dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout001"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hia1a_section51_header"
            android:id="@+id/labelTextView001"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout0001"
        android:layout_below="@+id/linearLayout001"
        android:paddingTop="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hia1a_section52_header"
            android:id="@+id/labelTextView0001"
            android:textSize="14sp"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout0001"
        android:id="@+id/linearLayout002"
        android:paddingTop="25dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/recall"
            android:id="@+id/labelTextView002"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout002"
        android:id="@+id/linearLayout003"
        android:paddingTop="10dp"
        >

        <CheckBox
            android:text="@string/abnormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_RECA"
            android:layout_weight="1" />

        <CheckBox
            android:text="@string/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_RECN"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout003"
        android:id="@+id/linearLayout004"
        android:paddingTop="25dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hia1a_section61_header"
            android:id="@+id/labelTextView003"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout004"
        android:id="@+id/linearLayout005"
        android:paddingTop="10dp">

        <TextView
            android:text="@string/cs1"
            android:layout_width="256dp"
            android:layout_height="39dp"
            android:id="@+id/textView004"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp"/>

        <CheckBox
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_CS1_Y"
            android:layout_weight="1" />

        <CheckBox
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_CS1_N"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout005"
        android:id="@+id/linearLayout006"
        android:paddingTop="10dp">

        <TextView
            android:text="@string/cs2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView005"
            android:layout_weight="3.69"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp"/>

        <CheckBox
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_CS2_Y"
            android:layout_weight="1" />

        <CheckBox
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_CS2_N"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout006"
        android:id="@+id/linearLayout007"
        android:paddingTop="10dp">

        <TextView
            android:text="@string/cs3"
            android:layout_width="243dp"
            android:layout_height="63dp"
            android:id="@+id/textView006"
            android:layout_weight="1.76"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp"/>

        <CheckBox
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_CS3_Y"
            android:layout_weight="1" />

        <CheckBox
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox_CS3_N"
            android:layout_weight="1" />
    </LinearLayout>


</RelativeLayout>